# txt2sql-guardrails

./: .gitignore  DECISIONS.md  README.md  app.py  pyproject.toml  requirements.txt
src/txt2sql/: __init__.py  cli.py  config.py  models.py  pipeline.py  sampledb.py
src/txt2sql/execute/: sandbox.py
src/txt2sql/generate/: generator.py  prompt.py
src/txt2sql/guard/: __init__.py  parser.py  rules.py  sanitizer.py
src/txt2sql/providers/: base.py  mock.py
src/txt2sql/schema/: introspect.py
tests/: conftest.py  test_cli.py  test_config.py  test_generator.py  test_guard_rules.py  test_pipeline.py  test_sandbox.py
tests/attacks/: corpus.py  test_attacks.py
