[project]
name = "txt2sql"
version = "0.1.0"
description = "Natural-language to SQL with an AST-level guardrail that statically blocks destructive queries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "loguru>=0.7",
    "sqlglot>=25",
    "sqlalchemy>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
]
demo = ["gradio>=4"]

[project.scripts]
txt2sql = "txt2sql.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/txt2sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/txt2sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
